syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "UserMemory.API.Protos";

package usermemory;

// === Request/Response ===
message SearchMemoriesRequest {
  string alias_id = 1;            // required (uuid)
  string query = 2;               // required (user text)

  int32  top_k = 3;               // optional (server mặc định 8)
  double min_score = 4;           // optional (server mặc định 0.5)

  // optional filter đơn giản (nếu chưa cần thì bỏ trống)
  repeated string tag_codes = 5;  // ví dụ: ["food","emotion_tired"]

  // để dành số field cho sau này
  reserved 6 to 20;
}

message MemoryHit {
  string id = 1;                  // uuid
  string summary = 2;             // tóm tắt ngắn
  double score = 3;               // [0..1]
  google.protobuf.Timestamp captured_at = 4;
}

message SearchMemoriesResponse {
  repeated MemoryHit hits = 1;
}

// === Service ===
service UserMemorySearchService {
  rpc SearchMemories (SearchMemoriesRequest) returns (SearchMemoriesResponse);
}
